# sandbox

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml  codeql.yml  conan.yml
src/: CMakeLists.txt
src/awesome_service/: main.cpp
src/calculator/: CMakeLists.txt  config.cpp  config.h  engine.cpp  engine.h  io_handler.cpp  io_handler.h  main.cpp  service.cpp  service.h
